no fixed height on mobile

--- a/jaysa.net/src/app/styles/Home.module.css
+++ b/jaysa.net/src/app/styles/Home.module.css
@@ -134,7 +134,6 @@
   }
   .innerFriendBox {
     width: 209px;
-    height: 20rem;
   } 
   .card {
     width: 14rem;
